Bug Overflow X

--- a/src/CSS/productoContainer.css
+++ b/src/CSS/productoContainer.css
@@ -2,6 +2,7 @@
     margin-top: 4.6rem;
 
     text-align: initial;
+    overflow-x: hidden;
 }
 
 @media (max-width: 600px){
